udkast1 ændret, udkast 2 started

--- a/Udkast 2/udkast2_projektrapport.tex
+++ b/Udkast 2/udkast2_projektrapport.tex
@@ -12,6 +12,8 @@
 %\input{content}	
 \input{projektformulering.tex}
 
+\chapter(Forord)
+\chapter(Indledning)
 \chapter{Krav}
 \section{Usecase beskrivelse}
 I dette afsnit vil kun de væsentligste krav blive præsenteret. Ønskes der et større indblik i beskrivelse af krav og yderligere krav til projektet henvises der til bilagsrapporten. Usecasen som er blevet udevalgt her er "Planlæg åbning", da den også indeholde alt hvad der er i usecasen "Åbn nu". "Åbn nu" usecasen kan findes under bilag x, i doukumentationen. Der er yderligere en usecase som ikke er blevet medtaget i denne rapport. Det er Usecasen "Indstil tid". Denne er ikke blevet medtaget, da den ikke har den store påvirkning på iltåbningsprocessen.
@@ -51,5 +53,14 @@ Igen vil der her kun blive præsenteret de væsentligste ikke-funktionelle krav.
 
 \chapter{Afgrænsing}
 Som udgangspunkt havde det endelige produkt mange flere funktioner end det er endt med. På baggrund af en RISK-analyse blev prioritetsrækkefølgen afgjort. Det blev besluttet at dem med højest RISK-faktor skulle være det der skulle startes på først. Derfor blev funktioner som WineBook (et socialt medie for vindeling) hurtig ned prioriteret. For at se Risk-analysen henvises til bilag x i dokementationsrapporten.
+
+\chapter(Realisering)
+\section(Arkitektur)
+
+\chapter(Test)
+
+\chapter(Diskussion)
+
+\chapter(konklusion)
 
 \end{document}
